--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </article>
   </section>
   <section style="width: 60%; margin-left: 20%; padding: 10px;margin-top: 35px;">
-    <article style="font-size: 19px; text-indent:36px;" >
+    <article style="font-size: 19px; text-indent:36px; line-height: 20pt;" >
       <p >For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely. </p><br>
       <p>  Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled. </p><br>
       <p> Using an ice cream machine, pour liquids into the frozen hasin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for - / +10 minutes. Pour semi-frezen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p><br>
@@ -102,10 +102,22 @@
 <div id="logof" >
   <img src="img/van-pic.png" alt="van-pic">
   <div id="logoftext">
-  <h1>DELicious</h1>
-  <h4>THE BEST FOOD BLOG ON THE WEB</h4>
+  <h6 style="font-weight: bolder; font-size: 25px;">Vanessa Stevenson </h6>
+  <h4 style="margin-top: 10px; font-size: 18px;line-height: 20pt;">Food enthusiast, photography fan. Add a pinch of raw foodism and that's <br> pretty much who I am.</h4>
   </div>
 </div >
+<div id="divnav2">
+  <nav>
+    <ul>
+     
+      <li ><a style=" text-decoration-line: none;color: white;" href="">SHARE RECIPE</a></li>
+      
+    </ul>
+  </nav>
+</div>
+<div>
+  <img src="img/the end.jpg" alt="the end">
+</div>
 </footer>
 <body>
 
